programs: update .gitignore
Add a new entry for benchmark program since it was moved from the
main repo to this one.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/programs/.gitignore
+++ b/programs/.gitignore
@@ -4,6 +4,7 @@ psa/hmac_demo
 psa/key_ladder_demo
 psa/psa_constant_names
 psa/psa_hash
+test/benchmark
 
 ###START_GENERATED_FILES###
 # Generated source files
