--- a/programs/psa/CMakeLists.txt
+++ b/programs/psa/CMakeLists.txt
@@ -5,6 +5,7 @@ set(executables
     key_ladder_demo
     psa_constant_names
     psa_hash
+    which_aes
 )
 add_dependencies(${programs_target} ${executables})
 
