--- a/drivers/everest/CMakeLists.txt
+++ b/drivers/everest/CMakeLists.txt
@@ -10,6 +10,7 @@ target_include_directories(${everest_target}
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
          $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/include>
          $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/drivers/builtin/include>
+         $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/drivers/everest/include/tf-psa-crypto/private/>
          $<INSTALL_INTERFACE:include>
   PRIVATE include/everest
           include/everest/kremlib
