Add which_aes to gitignore
Signed-off-by: Felix Conway <felix.conway@arm.com>

--- a/programs/.gitignore
+++ b/programs/.gitignore
@@ -5,6 +5,7 @@ psa/key_ladder_demo
 psa/psa_constant_names
 psa/psa_hash
 test/benchmark
+test/which_aes
 
 ###START_GENERATED_FILES###
 # Generated source files
