--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-    - name: Mbed TLS security team
+    - name: Mbed TLS & TF-PSA-Crypto security team
       url: mailto:mbed-tls-security@lists.trustedfirmware.org
       about: Report a security vulnerability.
-    - name: Mbed TLS mailing list
-      url: https://lists.trustedfirmware.org/mailman3/lists/mbed-tls.lists.trustedfirmware.org
-      about: Mbed TLS community support and general discussion.
+    - name: PSA Crypto mailing list
+      url: https://lists.trustedfirmware.org/mailman3/lists/psa-crypto.lists.trustedfirmware.org/
+      about: PSA Crypto community support and general discussion.
