Add new directory to CMakeLists
Signed-off-by: Felix Conway <felix.conway@arm.com>

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,7 +3,7 @@ option(INSTALL_TF_PSA_CRYPTO_HEADERS "Install TF PSA Crypto headers." ON)
 if(INSTALL_TF_PSA_CRYPTO_HEADERS)
     file(GLOB psa_headers "psa/*.h")
     file(GLOB tf-psa-crypto_headers "tf-psa-crypto/*.h")
-    file(GLOB mbedtls_crypto_headers "../drivers/builtin/include/mbedtls/*.h")
+    file(GLOB mbedtls_crypto_headers "../drivers/builtin/include/mbedtls/*.h" "mbedtls/*.h")
 
     install(FILES ${psa_headers}
         DESTINATION include/psa
