--- a/programs/test/CMakeLists.txt
+++ b/programs/test/CMakeLists.txt
@@ -14,7 +14,7 @@ tfpsacrypto_build_program_common(benchmark)
 target_sources(benchmark PRIVATE $<TARGET_OBJECTS:tf_psa_crypto_test>)
 target_link_libraries(benchmark PRIVATE ${tfpsacrypto_target} ${CMAKE_THREAD_LIBS_INIT})
 
-# benchmark
+# which_aes
 tfpsacrypto_build_program_common(which_aes)
 target_link_libraries(which_aes PRIVATE ${tfpsacrypto_target})
 
