--- a/programs/fuzz/CMakeLists.txt
+++ b/programs/fuzz/CMakeLists.txt
@@ -23,6 +23,7 @@ foreach(exe IN LISTS executables_no_common_c executables_with_common_c)
 
     set(exe_sources
         ${exe}.c
+        ${TF_PSA_CRYPTO_FRAMEWORK_DIR}/tests/src/helpers.c
         ${TF_PSA_CRYPTO_FRAMEWORK_DIR}/tests/src/drivers/platform_builtin_keys.c)
     if(NOT FUZZINGENGINE_LIB)
         list(APPEND exe_sources onefile.c)
@@ -36,7 +37,8 @@ foreach(exe IN LISTS executables_no_common_c executables_with_common_c)
 
     add_executable(${exe} ${exe_sources})
     set_base_compile_options(${exe})
-    target_include_directories(${exe} PRIVATE ${TF_PSA_CRYPTO_FRAMEWORK_DIR}/tests/include)
+    target_include_directories(${exe} PRIVATE ../../core/
+	                                      ${TF_PSA_CRYPTO_FRAMEWORK_DIR}/tests/include)
 
     if (NOT FUZZINGENGINE_LIB)
         target_link_libraries(${exe} ${libs})
