--- a/programs/test/CMakeLists.txt
+++ b/programs/test/CMakeLists.txt
@@ -16,6 +16,7 @@ target_link_libraries(benchmark PRIVATE ${tfpsacrypto_target} ${CMAKE_THREAD_LIB
 
 # which_aes
 tfpsacrypto_build_program_common(which_aes)
+target_sources(which_aes PRIVATE $<TARGET_OBJECTS:tf_psa_crypto_test>)
 target_link_libraries(which_aes PRIVATE ${tfpsacrypto_target})
 
 # dlopen
