--- a/drivers/p256-m/CMakeLists.txt
+++ b/drivers/p256-m/CMakeLists.txt
@@ -10,10 +10,10 @@ target_include_directories(${p256m_target}
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
          $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/include>
          $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/drivers/builtin/include>
-         $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/drivers/everest/include>
          $<INSTALL_INTERFACE:include>
   PRIVATE ${TF_PSA_CRYPTO_DIR}/core
-         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/p256-m>)
+          $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/p256-m>
+          $<BUILD_INTERFACE:${TF_PSA_CRYPTO_DIR}/drivers/everest/include>)
 set_config_files_compile_definitions(${p256m_target})
 
 install(TARGETS ${p256m_target}
