--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "framework"]
 	path = framework
 	url = https://github.com/Mbed-TLS/mbedtls-framework
+
+[submodule "everest"]
+	path = drivers/everest
+	url = https://github.com/gilles-peskine-arm/TF-everest
