Use -fzero-init-padding-bits=all to avoid GCC 15.0 "feature"
GCC 15 interprets the C23 union initialization rules to allow it to
skip initializing portions of structs and unions, this breaks
code like:

	const struct psa_pake_operation_s v = { 0 };

as large portions of 'v' will be left uninitialized.

To avoid this "feature", use -fzero-init-padding-bits=all to restore
GCC behavior to that in earlier versions of the compiler.

Here's a similar change as adopted in Linux:

https://lore.kernel.org/lkml/20250127191031.245214-3-kees@kernel.org/

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,6 +245,13 @@ function(set_gnu_base_compile_options target)
             target_compile_options(${target} PRIVATE -Wformat-signedness)
         endif()
     endif()
+    # Avoid GCC 15 change which leaves portions of structs/unions uninitialized
+    if (GCC_VERSION VERSION_GREATER 15.0 OR GCC_VERSION VERSION_EQUAL 15.0)
+        CHECK_C_COMPILER_FLAG("-fzero-init-padding-bits=all" C_COMPILER_SUPPORTS_FZERO_INIT_PADDING_BITS_ALL)
+	if(C_COMPILER_SUPPORTS_FZERO_INIT_PADDING_BITS_ALL)
+	    target_compile_options(${target} PRIVATE -fzero-init-padding-bits=all)
+	endif()
+    endif()
     if (GCC_VERSION VERSION_GREATER 7.0 OR GCC_VERSION VERSION_EQUAL 7.0)
       target_compile_options(${target} PRIVATE -Wformat-overflow=2 -Wformat-truncation)
     endif()
